add layout styles

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,11 +12,12 @@
 // Layout Imports
 
 @import 'layout/grid';
+@import 'layout/gutters';
 
 
 // Block Imports
 
-@import 'layout/grid';
+@import 'blocks/gallery-item';
 
 
 // Theme Imports
