--- a/app/styles/layout/_grid.scss
+++ b/app/styles/layout/_grid.scss
@@ -1,5 +1,6 @@
 .grid-container {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
@@ -7,14 +8,14 @@
   flex-grow: 1;
 
   @media #{$bp-2-column-grid} {
-    width: 50%;
+    max-width: 50%;
   }
 
   @media #{$bp-3-column-grid} {
-    width: percentage(1/3);
+    max-width: percentage(1/3);
   }
 
   @media #{$bp-4-column-grid} {
-    width: 25%;
+    max-width: 25%;
   }
 }
